--- a/pom.xml
+++ b/pom.xml
@@ -1,85 +1,59 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>eu.socialsensor</groupId>
-  <artifactId>socialmedia-abstractions</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-      <repositories>
-        <repository>
-            <id>central</id>
-            <name>Maven Repository Switchboard</name>
-            <layout>default</layout>
-            <url>http://repo1.maven.org/maven2</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>       
-        <repository>
-            <id>central-staging</id>
-            <url>https://oss.sonatype.org/content/groups/central-staging/</url>
-        </repository>
-        <repository>
-            <id>mandubian-mvn</id>
-            <url>
-                http://mandubian-mvn.googlecode.com/svn/trunk/mandubian-mvn/repository
-            </url>
-        </repository>
-        <repository>
-            <id>prometheus-atc-releases</id>
-            <name>prometheus-atc-releases</name>
-            <url> http://prometheus.atc.gr:8080/nexus/content/repositories/releases/</url>
-            <releases>
-                <updatePolicy>always</updatePolicy>
-                <enabled>true</enabled>
-            </releases>
-        </repository>
-        <repository>
-            <id>prometheus-atc-snapshots</id>
-            <name>prometheus-atc-snapshots</name>
-            <url>http://prometheus.atc.gr:8080/nexus/content/repositories/snapshots/</url>
-            <snapshots>
-                <updatePolicy>always</updatePolicy>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-          <repository>
-    <id>sing-maven2-repository</id>
-    <name>SING Maven Repository</name>
-    <url>http://sing.ei.uvigo.es/maven2</url>
-  </repository>
-    </repositories>
+  	
+  	<modelVersion>4.0.0</modelVersion>
+  	<groupId>eu.socialsensor</groupId>
+  	<artifactId>socialmedia-abstractions</artifactId>
+  	<version>0.1-SNAPSHOT</version>
+  	<packaging>jar</packaging>
+  	
+	<name>socialsensor-framework-common</name>
+    <url>https://github.com/socialsensor/socialmedia-abstractions</url>
+    <description>Contains data abstractions for mapping a number of different social networks to a single representation.</description>
+      
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
     
-    <distributionManagement>
-        <repository>
-            <id>prometheus-atc</id> 
-            <name>prometheus-atc-releases</name> 
-            <url>http://prometheus.atc.gr:8080/nexus/content/repositories/releases/</url> 
-        </repository>
-        <snapshotRepository>
-            <id>prometheus-atc</id> 
-            <name>prometheus-atc-snapshots</name> 
-            <url>http://prometheus.atc.gr:8080/nexus/content/repositories/snapshots/</url> 
-        </snapshotRepository>
-    </distributionManagement>
+  	<developers>
+        <developer>
+            <id>manosetro</id>
+            <name>Manos Schinas</name>
+            <email>manosetro@iti.gr</email>
+        </developer>
+        <developer>
+            <id>matzika</id>
+            <name>Katerina Ailiakopoulou</name>
+            <email>ailiakop@iti.gr</email>
+        </developer>
+    </developers>
+    
+    <licenses>
+    	<license>
+      		<name>The Apache Software License, Version 2.0</name>
+      		<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      		<distribution>repo</distribution>
+    	</license>
+  	</licenses>
+  
+  	<scm>
+        <connection>scm:git:git@github.com:socialsensor/socialmedia-abstractions.git</connection>
+        <developerConnection>scm:git:git@github.com:socialsensor/socialmedia-abstractions.git</developerConnection>
+        <url>git@github.com:socialsensor/socialmedia-abstractions.git</url>
+    </scm>
+    
+  	<properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    
     <dependencies>
     	<dependency>
     		<groupId>eu.socialsensor</groupId>
     		<artifactId>socialsensor-framework-common</artifactId>
-    		<version>1.0-SNAPSHOT</version>
+    		<version>0.2-SNAPSHOT</version>
     	</dependency>
-    	        <dependency>
+  		<dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.4</version>
@@ -144,31 +118,54 @@
     		<artifactId>restfb</artifactId>
     		<version>1.6.12</version>
     	</dependency>
-    	
-    	<dependency>
-            <groupId>eu.socialsensor</groupId>
-            <artifactId>hub.core</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>eu.socialsensor</groupId>
-            <artifactId>hub.emf</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>eu.socialsensor</groupId>
-            <artifactId>hub.net</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>eu.socialsensor</groupId>
-            <artifactId>hub.utils</artifactId>
-            <version>1.0</version>
-        </dependency>
         <dependency>
             <groupId>rome</groupId>
             <artifactId>rome</artifactId>
             <version>0.9</version>
         </dependency> 
     </dependencies>
+   
+  	<repositories />
+    <pluginRepositories />
+                
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+         
+            </plugin>
+      
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
