--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         </developer>
         <developer>
             <id>matzika</id>
-            <name>Katerina Ailiakopoulou</name>
+            <name>Katerina Iliakopoulou</name>
             <email>ailiakop@iti.gr</email>
         </developer>
     </developers>
