--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
     		<version>1.1</version>
     	</dependency>
     	<dependency>
+  			<groupId>com.flickr4java</groupId>
+  			<artifactId>flickr</artifactId>
+  			<version>2.5</version>
+		</dependency>
+    	<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>1.5.2</version>
@@ -125,7 +130,17 @@
         </dependency> 
     </dependencies>
    
-  	<repositories />
+  	<repositories>
+  		<repository>
+       		<snapshots>
+           		<enabled>false</enabled>
+         	</snapshots>
+         	<id>central</id>
+        	<name>bintray</name>
+        	<url>http://jcenter.bintray.com</url>
+    	</repository>
+  	</repositories>
+  	
     <pluginRepositories />
                 
     <build>
