--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
     		<artifactId>restfb</artifactId>
     		<version>1.6.12</version>
     	</dependency>
+    	<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.2</version>
+		</dependency>
         <dependency>
             <groupId>rome</groupId>
             <artifactId>rome</artifactId>
