--- a/pom.xml
+++ b/pom.xml
@@ -124,20 +124,35 @@
     		<version>1.6.12</version>
     	</dependency>
     	<dependency>
-			<groupId>org.jsoup</groupId>
-			<artifactId>jsoup</artifactId>
-			<version>1.7.2</version>
-		</dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
         <dependency>
             <groupId>rome</groupId>
             <artifactId>rome</artifactId>
             <version>0.9</version>
-        </dependency> 
+        </dependency>
         <dependency>
 			<groupId>org.rometools</groupId>
 			<artifactId>rome-modules</artifactId>
 			<version>1.0</version>
 		</dependency>  
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.2</version>
+		</dependency>
+        <dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>14.0.1</version>
+		</dependency>
 		<dependency>
             <!-- Required at build time and to use HTTPClientFetcher //rometools-->
             <groupId>commons-httpclient</groupId>
@@ -159,11 +174,17 @@
             <version>1.0.4</version>
             <optional />
         </dependency>
-        <dependency>
+         <dependency>
+        	<groupId>net.java.dev.rome</groupId>
+        	<artifactId>rome-fetcher</artifactId>
+        	<version>1.0.0</version>
+        </dependency>
+       <!-- <dependency>
 			<groupId>org.rometools</groupId>
 			<artifactId>rome-fetcher</artifactId>
 			<version>1.2</version>
-		</dependency>      
+		</dependency>      -->
+		
     </dependencies>
    	
   	<repositories>
