--- a/pom.xml
+++ b/pom.xml
@@ -48,21 +48,44 @@
     </properties>
     
     <dependencies>
+    	<!-- Social Sensor -->
     	<dependency>
     		<groupId>eu.socialsensor</groupId>
     		<artifactId>socialsensor-framework-common</artifactId>
     		<version>0.2-SNAPSHOT</version>
     	</dependency>
-  		<dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>1.4</version>
-        </dependency>
-        		<dependency>
+    	<!-- Google -->
+        <dependency>
 			<groupId>com.google.http-client</groupId>
 			<artifactId>google-http-client-jackson2</artifactId>
 			<version>1.15.0-rc</version>
 		</dependency>  
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client-jackson</artifactId>
+			<version>1.15.0-rc</version>
+		</dependency>
+		<dependency>
+    		<groupId>com.google.api-client</groupId>
+    		<artifactId>google-api-client</artifactId>
+    		<version>1.15.0-rc</version>
+    	</dependency>
+    	<dependency>
+    		<groupId>com.google.apis</groupId>
+    		<artifactId>google-api-services-plus</artifactId>
+    		<version>v1-rev79-1.15.0-rc</version>
+    	</dependency>     
+    	<dependency>
+    		<groupId>com.google.gdata</groupId>
+    		<artifactId>core</artifactId>
+    		<version>1.47.1</version>
+    	</dependency>
+    	<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>14.0.1</version>
+		</dependency>
+		<!-- Flickr -->
     	<dependency>
     		<groupId>com.aetrion.flickr</groupId>
     		<artifactId>flickrapi</artifactId>
@@ -73,32 +96,14 @@
   			<artifactId>flickr</artifactId>
   			<version>2.5</version>
 		</dependency>
-    	<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>1.5.2</version>
-		</dependency>  
-    	<dependency>
-    		<groupId>com.google.api-client</groupId>
-    		<artifactId>google-api-client</artifactId>
-    		<version>1.15.0-rc</version>
-    	</dependency>
-    	<dependency>
-    		<groupId>com.google.apis</groupId>
-    		<artifactId>google-api-services-plus</artifactId>
-    		<version>v1-rev79-1.15.0-rc</version>
-    	</dependency>     
-        <dependency>
+		<!-- Instagram -->
+		<dependency>
    			<groupId>com.sachinhandiekar</groupId>
    			<artifactId>jInstagram</artifactId>
    			<version>1.0.3</version>
 		</dependency>
+		<!-- Twitter -->
 		<dependency>
-			<groupId>com.google.http-client</groupId>
-			<artifactId>google-http-client-jackson</artifactId>
-			<version>1.15.0-rc</version>
-		</dependency>
-    	<dependency>
     		<groupId>org.twitter4j</groupId>
     		<artifactId>twitter4j-stream</artifactId>
     		<version>3.0.5</version>
@@ -108,27 +113,21 @@
     		<artifactId>twitter4j-core</artifactId>
     		<version>3.0.5</version>
     	</dependency>
-    	<dependency>
-    		<groupId>com.google.gdata</groupId>
-    		<artifactId>core</artifactId>
-    		<version>1.47.1</version>
-    	</dependency>
+    	<!-- Tumblr -->
     	<dependency>
     		<groupId>com.tumblr</groupId>
     		<artifactId>jumblr</artifactId>
     		<version>0.0.6</version>
     	</dependency>
+    	<!-- Facebook -->
     	<dependency>
     		<groupId>com.restfb</groupId>
     		<artifactId>restfb</artifactId>
     		<version>1.6.12</version>
     	</dependency>
+    	
+    	<!-- RSS -->
     	<dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20090211</version>
-        </dependency>
-        <dependency>
             <groupId>rome</groupId>
             <artifactId>rome</artifactId>
             <version>0.9</version>
@@ -138,22 +137,7 @@
 			<artifactId>rome-modules</artifactId>
 			<version>1.0</version>
 		</dependency>  
-		<dependency>
-			<groupId>org.jdom</groupId>
-			<artifactId>jdom</artifactId>
-			<version>2.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jsoup</groupId>
-			<artifactId>jsoup</artifactId>
-			<version>1.7.2</version>
-		</dependency>
-        <dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>14.0.1</version>
-		</dependency>
-		<dependency>
+				<dependency>
             <!-- Required at build time and to use HTTPClientFetcher //rometools-->
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
@@ -179,12 +163,35 @@
         	<artifactId>rome-fetcher</artifactId>
         	<version>1.0.0</version>
         </dependency>
-       <!-- <dependency>
+         <!-- <dependency>
 			<groupId>org.rometools</groupId>
 			<artifactId>rome-fetcher</artifactId>
 			<version>1.2</version>
 		</dependency>      -->
 		
+		
+    	<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>1.5.2</version>
+		</dependency>  
+    	<dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
+        
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.2</version>
+		</dependency>
+
     </dependencies>
    	
   	<repositories>
