--- a/pom.xml
+++ b/pom.xml
@@ -76,17 +76,23 @@
 			<version>14.0.1</version>
 		</dependency>
 		<!-- Flickr -->
+		<!--  
     	<dependency>
     		<groupId>com.aetrion.flickr</groupId>
     		<artifactId>flickrapi</artifactId>
     		<version>1.1</version>
     	</dependency>
-    	
+    	-->
+    	<dependency>
+  			<groupId>com.flickr4java</groupId>
+  			<artifactId>flickr</artifactId>
+  			<version>2.5</version>
+		</dependency>
 		<!-- Instagram -->
 		<dependency>
    			<groupId>com.sachinhandiekar</groupId>
    			<artifactId>jInstagram</artifactId>
-   			<version>1.0.3</version>
+   			<version>1.0.7</version>
 		</dependency>
 		<!-- Twitter -->
 		<dependency>
@@ -123,7 +129,9 @@
 			<artifactId>rome-modules</artifactId>
 			<version>1.0</version>
 		</dependency>  
-	<!--			<dependency>
+		
+	<!--			
+	<dependency>
              Required at build time and to use HTTPClientFetcher //rometools
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
