--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
     	<dependency>
     		<groupId>eu.socialsensor</groupId>
     		<artifactId>socialsensor-framework-common</artifactId>
-    		<version>0.2.2-SNAPSHOT</version>
+    		<version>0.2.2</version>
     	</dependency>
     	<!-- Google -->
         <dependency>
