--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   	<modelVersion>4.0.0</modelVersion>
   	<groupId>eu.socialsensor</groupId>
   	<artifactId>socialmedia-abstractions</artifactId>
-  	<version>0.2</version>
+  	<version>0.2.1-SNAPSHOT</version>
   	<packaging>jar</packaging>
   	
 	<name>socialmedia-abstractions</name>
@@ -41,7 +41,7 @@
         <connection>scm:git:git@github.com:socialsensor/socialmedia-abstractions.git</connection>
         <developerConnection>scm:git:git@github.com:socialsensor/socialmedia-abstractions.git</developerConnection>
         <url>git@github.com:socialsensor/socialmedia-abstractions.git</url>
-      <tag>socialmedia-abstractions-0.2</tag>
+      <tag>HEAD</tag>
   </scm>
     
   	<properties>
