--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   	<modelVersion>4.0.0</modelVersion>
   	<groupId>eu.socialsensor</groupId>
   	<artifactId>socialmedia-abstractions</artifactId>
-  	<version>0.2.1-SNAPSHOT</version>
+  	<version>0.2-SNAPSHOT</version>
   	<packaging>jar</packaging>
   	
 	<name>socialmedia-abstractions</name>
@@ -41,8 +41,7 @@
         <connection>scm:git:git@github.com:socialsensor/socialmedia-abstractions.git</connection>
         <developerConnection>scm:git:git@github.com:socialsensor/socialmedia-abstractions.git</developerConnection>
         <url>git@github.com:socialsensor/socialmedia-abstractions.git</url>
-      <tag>HEAD</tag>
-  </scm>
+    </scm>
     
   	<properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -186,7 +185,7 @@
 				<version>1.6.3</version>
 				<extensions>true</extensions>
 				<configuration>
-					<serverId>sonatype-nexus-staging</serverId>
+					<serverId>ossrh</serverId>
 					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 					<autoReleaseAfterClose>true</autoReleaseAfterClose>
 				</configuration>
