--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   	<modelVersion>4.0.0</modelVersion>
   	<groupId>eu.socialsensor</groupId>
   	<artifactId>socialmedia-abstractions</artifactId>
-  	<version>0.2</version>
+  	<version>0.2.1-SNAPSHOT</version>
   	<packaging>jar</packaging>
   	
 	<name>socialmedia-abstractions</name>
